--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
-node_modules/
-dist/
-build/
-
-*.js.map
-*.d.ts
-*.d.ts.map
+/node_modules/
+custom-elements.json
+# only generated for size check
+my-element.bundled.js
