--- a/package.json
+++ b/package.json
@@ -48,15 +48,18 @@
     "@vaadin/date-picker": "^24.8.1",
     "@vaadin/dialog": "^24.8.1",
     "@vaadin/grid": "^24.8.1",
+    "@vaadin/icon": "^24.8.1",
+    "@vaadin/icons": "^24.8.1",
     "@vaadin/router": "^2.0.0",
     "@vaadin/select": "^24.8.1",
     "@vaadin/text-field": "^24.8.1",
+    "@vaadin/vaadin-icons": "^23.6.0",
     "lit": "^3.2.0",
     "lit-redux-watch": "^0.3.8",
     "redux": "^5.0.1"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^1.0.1",
+    "@11ty/eleventy": "^3.1.2",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.0.0",
     "@babel/eslint-parser": "^7.17.0",
     "@custom-elements-manifest/analyzer": "^0.6.3",
@@ -64,13 +67,13 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-replace": "^5.0.7",
     "@rollup/plugin-terser": "^0.4.4",
-    "@web/dev-server": "^0.1.31",
+    "@web/dev-server": "^0.4.6",
     "@web/dev-server-legacy": "^1.0.0",
-    "@web/test-runner": "^0.15.3",
-    "@web/test-runner-playwright": "^0.9.0",
+    "@web/test-runner": "^0.20.2",
+    "@web/test-runner-playwright": "^0.11.1",
     "@webcomponents/webcomponentsjs": "^2.8.0",
     "eslint": "^8.15.0",
-    "lit-analyzer": "^1.2.1",
+    "lit-analyzer": "^2.0.3",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
     "rollup": "^4.18.0",
