--- a/package.json
+++ b/package.json
@@ -48,10 +48,13 @@
     "@vaadin/card": "^24.8.1",
     "@vaadin/date-picker": "^24.8.1",
     "@vaadin/dialog": "^24.8.1",
+    "@vaadin/email-field": "^24.8.1",
     "@vaadin/grid": "^24.8.1",
     "@vaadin/horizontal-layout": "^24.8.1",
     "@vaadin/icon": "^24.8.1",
     "@vaadin/icons": "^24.8.1",
+    "@vaadin/item": "^24.8.1",
+    "@vaadin/list-box": "^24.8.1",
     "@vaadin/router": "^2.0.0",
     "@vaadin/scroller": "^24.8.1",
     "@vaadin/select": "^24.8.1",
