--- a/package.json
+++ b/package.json
@@ -62,8 +62,7 @@
     "@vaadin/vaadin-icons": "^23.6.0",
     "@vaadin/vertical-layout": "^24.8.1",
     "lit": "^3.2.0",
-    "lit-redux-watch": "^0.3.8",
-    "redux": "^5.0.1"
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@11ty/eleventy": "^3.1.2",
